fixed child process output redirection